--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "finniu-primeros",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://finniu.localhost:3000",
+
+
   "dependencies": {
     "@apollo/client": "^3.8.8",
+    "@apollo/server": "^4.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "graphql": "^16.8.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-icons": "^4.12.0",
-    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.21.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
