--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^3.0.1",
+    "react-sidebar": "^3.0.2",
     "recharts": "^2.10.3",
     "web-vitals": "^2.1.4"
+
+    
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
