--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-icons": "^4.12.0",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^3.0.1",
     "react-sidebar": "^3.0.2",
