--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-calendar": "^4.7.0",
@@ -22,8 +24,9 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "^3.0.1",
     "react-sidebar": "^3.0.2",
+    "react-simple-sidenav": "^2.0.0",
     "recharts": "^2.10.3",
-    "styled-components": "^6.1.6",
+    "styled-components": "^6.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
